# test-azure

./: app.py  helpers.py  pyproject.toml  startup.sh
.github/workflows/: main_Slimgpt.yml  main_slimgpt.yml
slimgpt/: slimgpt.py
slimgpt/templates/: demo.html  index.html
templates/: index.html
