[tool.poetry]
name = "test-azure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_azure"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.0.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
